<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.christmann.medievalbackend.LoginScreen"
    android:background="@android:color/background_dark">

    <ImageView
        android:layout_width="159dp"
        android:layout_height="129dp"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView"
        android:layout_marginStart="96dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="344dp"
        android:contentDescription="@string/imageDescription" />

    <TextView
        android:layout_width="183dp"
        android:layout_height="46dp"
        android:id="@+id/textView"
        android:text="@string/login_screen_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="256dp"
        android:layout_marginStart="88dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="187dp"
        android:layout_height="84dp"
        android:id="@+id/textView2"
        android:text="@string/login_screen_text2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="344dp"
        android:layout_marginStart="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="#ffffff" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_marginStart="136dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="56dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="192dp"
        android:hint="@string/enter_email"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginStart="72dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="211dp"
        android:layout_height="41dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_marginStart="72dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/enter_password"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/emailField"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray" />

</android.support.constraint.ConstraintLayout>
