<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">


    <TextView
        android:text="@string/enemyInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/textView6"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/mapPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/createButton"
        android:layout_marginStart="5dp"
        android:layout_marginTop="144dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="144dp"
        app:layout_constraintLeft_toLeftOf="@+id/latEditText" />

    <TextView
        android:text="@string/levelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:id="@+id/textView6"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="106dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toTopOf="@+id/nameEditText" />

    <TextView
        android:text="@string/spdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintRight_toLeftOf="@+id/spdEditText"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toTopOf="@+id/defEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:text="@string/Long"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintBaseline_toBaselineOf="@+id/lngEditText"
        tools:layout_constraintBaseline_creator="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:text="@string/defView"
        app:layout_constraintRight_toLeftOf="@+id/defEditText"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="91dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:text="@string/Lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textAppearance="@style/TextAppearance.AppCompat"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="1dp"
        app:layout_constraintRight_toRightOf="@+id/textView13"
        app:layout_constraintBaseline_toBaselineOf="@+id/latEditText"
        tools:layout_constraintBaseline_creator="1" />

    <TextView
        android:text="@string/maxHP_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintRight_toLeftOf="@+id/textView10"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="97dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hpEditText"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/atkView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintRight_toLeftOf="@+id/textView11"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/atkEditText"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView11" />

    <TextView
        android:text="@string/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintRight_toLeftOf="@+id/atkEditText"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameEditText"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/atkEditText" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameEditText"
        android:singleLine="true"
        android:textSize="14sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/atkEditText"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="@+id/textView8"
        android:layout_marginTop="48dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="48dp"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintLeft_toRightOf="@+id/textView12" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/levelEditText"
        android:textSize="14sp"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toRightOf="@+id/spdEditText"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/textView6" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/atkEditText"
        android:textSize="14sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="99dp"
        app:layout_constraintBottom_toBottomOf="@+id/defEditText"
        android:layout_marginEnd="99dp"
        app:layout_constraintRight_toRightOf="@+id/textView8"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/defEditText" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/defEditText"
        android:textSize="14sp"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="94dp"
        android:layout_marginEnd="94dp"
        app:layout_constraintRight_toRightOf="@+id/levelEditText"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView5" />

    <EditText
        android:layout_width="58dp"
        android:layout_height="35dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/hpEditText"
        android:textSize="14sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintRight_toRightOf="@+id/textView16"
        android:layout_marginTop="53dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="55dp"
        app:layout_constraintTop_toTopOf="@+id/defEditText"
        app:layout_constraintLeft_toRightOf="@+id/textView16" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/spdEditText"
        android:textSize="14sp"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/textView8" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/latEditText"
        android:textSize="14sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        android:layout_marginEnd="3dp"
        app:layout_constraintRight_toRightOf="@+id/textView10"
        android:layout_marginTop="37dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="36dp"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        app:layout_constraintLeft_toRightOf="@+id/textView12" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/lngEditText"
        android:textSize="14sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/createButton"
        android:layout_marginEnd="1dp"
        app:layout_constraintRight_toRightOf="@+id/latEditText"
        android:layout_marginTop="85dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="86dp"
        app:layout_constraintLeft_toLeftOf="@+id/latEditText"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <Button
        android:text="@string/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createButton"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="31dp"
        app:layout_constraintLeft_toLeftOf="@+id/lngEditText" />

</android.support.constraint.ConstraintLayout>
